<resources>
    <string name="vector_tiles_key" translatable="false">vector-tiles-fkZ5cDc</string>
    <string name="map">Map</string>
    <string name="mapless">Mapless</string>
    <string name="app_name">Tiny Travel Tracker</string>
    <string name="reviewer_app_name">Tiny Travel Tracker</string>
    <string name="delete_named_location">Delete ${item}?</string>
    <string name="welcome_password_title">Before we begin</string>
    <string name="welcome_password_message">Before we begin, would you like to enter a password? A password will encrypt the location data gathered by this application. You can always change your mind in the Settings menu.</string>
    <string name="continue_">Continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="help">Help</string>
    <string name="clearing_in_memory_cache">Clearing current gps cache</string>
    <string name="dialog_new_password_entry_title">Choose a password</string>
    <string name="new_passwords_dont_match">New passwords don\'t match</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reenter_new_password">Reenter new password</string>
    <string name="enter_backup_password">Enter backup password</string>
    <string name="reenter_backup_password">Reenter backup password</string>
    <string name="password_too_short">Password must be at least ${min_chars} characters</string>
    <string name="password_set_title">Password has been set</string>
    <string name="error_db_not_present">Couldn\'t find data file for storing GPS coordinates</string>
    <string name="error_collect_data">Error collecting GPS coordinates</string>
    <string name="collect_gps_data">Collect GPS Data</string>
    <string name="collect_gps_data_desc">GPS data will be collected in the background whenever the phone is on</string>
    <string name="store_db_externally">Store DB Externally? (under \"GpsTrailer\" folder)</string>
    <string name="error_cant_write_sd_card">Unable to collect data, can\'t write to sdcard</string>
    <string name="error_cant_delete_cache_file">Unable to alter cache, sdcard may be corrupt</string>
    <string name="begin_no_db">Before we begin…</string>
    <string name="set_database_password">Set database password</string>
    <string name="conclusion">The system will now begin recording your position periodically throughout your day. To see a map view of the data, or to change settings, just start the app. The amount of time the gps is run can be adjusted in the settings menu.</string>
    <string name="welcome_wizard_text">Welcome to Tiny Travel Tracker! This wizard will lead you through some setup questions.</string>
    <string name="wizard_should_have_password_text">Would you like to set a password? A password will be used to encrypt data used by this application. (You can always change your mind later)</string>
    <string name="battery_life_perc_time_gps_used">Please specify the percentage of time you want the GPS used. A greater percentage will result in more readings, but will use more battery life.</string>
    <string name="battery_life_min_battery_life">Please choose a minimum battery life. If the battery life falls below this percentage, the application will stop taking readings until the phone is recharged.</string>
    <string name="wizard_conclusion_text">"Thank you for using Tiny Travel Tracker. You're now being taken to map view. However, there won't be any history to see until some GPS readings are taken."</string>
    <string name="error_general">An internal error has occurred</string>
    <string name="enter_password">Enter password</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="turn_on_gps_query">Would you like to turn on GPS collecting in the background right away?</string>
    <string name="service_active">GPS collecting is active</string>
    <string name="service_gps_not_enabled">GPS needs to be enabled to collect GPS points</string>
    <string name="dialog_long_task_title">Please wait…</string>
    <string name="create_database_dialog_message">Creating database</string>
    <string name="wizard_setup_encryption_for_database">Configuring encryption settings…</string>
    <string name="zoom_out">Zoom out</string>
    <string name="auto_zoom">Auto Zoom</string>
    <string name="zoom_in">Zoom In</string>
    <string name="auto_zoom_no_data">Can\'t autozoom. There are no GPS data for selected time period</string>
    <string name="settings">Settings</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="old_password_incorrect">Old password is incorrect</string>
    <string name="enable_password">Enable password</string>
    <string name="change_password">Change password</string>
    <string name="turn_off_password">Turn off password</string>
    <string name="error_reviewer_low_free_space">The free space on the external storage is below 50MB. No more GPS points will be loaded, and the map will no longer be cached until free space is made available</string>
    <string name="error_reviewer_low_free_space_help">To increase the free space you may need to offload pictures or music or use an sdcard with more space</string>
    <string name="service_error_low_free_space">The free space on the external storage is below 50MB. GPS points will not be collected until more space is freed.</string>
    <string name="error_reviewer_cant_write_sdcard">Unable to write anything to sdcard. It is either damaged or completely full. No more GPS points will be loaded, and the map will no longer be cached until free space is made available and the application is restarted</string>
    <string name="service_error_internal_error">There was an internal error collecting gps points.</string>
    <string name="service_error_sdcard_not_mounted">The sdcard is not available. GPS points will not be collected</string>
    <string name="service_error_db_problem">Database is corrupt or missing</string>
    <string name="error_reviewer_sdcard_not_mounted">The sdcard is not available. Tiny Travel Tracker cannot be started. Note that sometimes it can take several minutes for the sdcard to go online</string>
    <string name="title_perc_time_gps_on">Time GPS is on</string>
    <string name="desc_perc_time_gps_on">Percentage of time GPS is turned on. This will affect battery usage.</string>
    <string name="title_min_battery_life_perc">Min Battery Life</string>
    <string name="desc_min_battery_life_perc">If the battery falls below this value, GPS reading will be automatically turned off.</string>
    <string name="title_password_timeout">Password timeout</string>
    <string name="desc_password_timeout">If app is exited, or phone is turned off, the timeout before asking for the password again. (Note, if phone is heavily used, password may be asked for again before timeout)</string>
    <string name="title_map_font_size">Map Font Size</string>
    <string name="desc_map_font_size">Determines the size of the labels of streets, cities, etc. within the map</string>
    <string name="error_password_cant_be_empty">Please specify a password</string>
    <string name="rollforward_timmy_database">Rerunning database journal…</string>
    <string name="wait_autozoom">Calculating Autozoom…</string>
    <string name="location_service_gps_provider_disabled">GPS must be enabled to view current location</string>
    <string name="pan_to_gps_loc">Find GPS location</string>
    <string name="timmy_corrupt">The app has encountered corruption in the database cache used to display points. The cache will be deleted and regenerated. While this is happening, your GPS points will disappear and slowly reappear over time and the app will be less responsive.</string>
    <string name="timmy_needs_upgrade">The cache database has been upgraded and must be regenerated. While this is happening, your GPS points will disappear and slowly reappear over time and the app will be less responsive.</string>
    <string name="x_of_x_items_format">%1$d of %2$d</string>
    <string name="media_gallery_strip_time_with_timezone">%1$s, %2$s</string>
    <string name="x_items_format">%d items</string>
    <string name="please_wait">Please wait…</string>
    <string name="turn_on_photos">Show photos</string>
    <string name="turn_off_photos">Turn off photos</string>
    <string name="time_view">Time View</string>
    <string name="time_and_date_format">yyyy, MMM dd, EEE, h:mm a</string>
    <string name="date_format">yyyy, MMM dd, EEE</string>
    <string name="go_to_main">Go to main screen</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="use_metric_units">Use Metric Units</string>
    <string name="colorblind_title">Change Trail Colors</string>
    <string name="colorblind_summary">Choose colors to display when drawing points</string>
    <string name="colorblind_choose_colors">Choose colors to display when drawing points</string>
    <string name="drawing_points">Drawing Points</string>
    <string name="pan_to_location_button_tooltip">This button centers the display on your current location.</string>
    <string name="autozoom_button_tooltip">This button centers the display on all visible data points for selected time range.</string>
    <string name="timeview_tooltip">Sliding left to right in the bottom panel adjusts the time range forwards and backwards. Sliding up and down adjusts the amount of time covered.</string>
    <string name="enable_tooltips">Enable Tool Tips</string>
    <string name="no_points_yet">There aren\'t any GPS points recorded yet, so there is nothing to view</string>
    <string name="free_version_before_expiry">The trial period will expire in %d days. Touch here to buy the full version.</string>
    <string name="free_version_before_expiry_1_day">The trial period will expire in %d day. Touch here to buy the full version.</string>
    <string name="free_version_after_expiry">The trial period has expired. GPS points will no longer be recorded. Touch here to buy the full version.</string>
    <string name="location_unknown">The current GPS location cannot be determined</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="select_multiple_areas">Select multiple areas</string>
    <string name="error_trying_purchase">There was an error contacting the purchasing server. Please try again later</string>
    <string name="no_points_no_collect">There are no GPS points in the database. In order to add GPS points, you need to turn on "Collect GPS Data" in the Settings menu</string>
    <string name="no_points_with_collect">There are no GPS points in the database, yet. Check back later for some GPS data points to be collected</string>
    <string name="exit">Exit</string>
    <string name="purchase_thank_you">Thank you for purchasing Tiny Travel Tracker. Enjoy!</string>
    <string name="dist">Dist</string>
    <string name="enter_from_date_to_to_date_title">Select Start and End Dates</string>
    <string name="gpx_backup_title">Create GPX Backup</string>
    <string name="gpx_backup_format">Backup format is GPX 1.1. File is created in root directory of external storage</string>
    <string name="gpx_backup_name">Name</string>
    <string name="gpx_backup_use_password">Password protect backup file</string>
    <string name="gpx_backup_create">Create</string>
    <string name="gpx_backup_encryption">Uses AES 256 bit encryption. Can be opened with WinZip 9.0 (R) or above (Windows), or 7z (Windows, Linux, Mac)</string>
</resources>