<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password" />

    <EditText
        android:id="@+id/enter_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingTop="5dp"
		android:imeOptions="actionDone"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_incorrect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_incorrect"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#FFFF0000"
        android:textStyle="bold"
        android:visibility="invisible"
         />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOk"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancel"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>