<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/enter_old_password_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
        android:text="@string/enter_old_password" >
    </TextView>

    <EditText
        android:id="@+id/enter_old_password_edit_text"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/enter_old_password"
        android:password="true" >
    </EditText>

    <TextView
        android:id="@+id/enter_new_password_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
        android:text="@string/enter_new_password" >
    </TextView>

    <EditText
        android:id="@+id/enter_new_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
        android:singleLine="true"
        android:hint="@string/enter_new_password"
        android:password="true" >
    </EditText>

    <TextView
        android:id="@+id/reenter_new_password_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
        android:text="@string/reenter_new_password" >
    </TextView>

    <EditText
        android:id="@+id/reenter_new_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_new_password"
        android:singleLine="true"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
		android:imeOptions="actionDone"
        android:password="true" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="250dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>